clusters/k3s-home/apps/longhorn.disabled/overlays/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-http-route
  namespace: longhorn
spec:
  parentRefs:
  - name: main-gateway
    namespace: networking
    sectionName: https
  hostnames:
  - "longhorn.fletcherlabs.net"
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80
